--- a/competicio/templates/home.html
+++ b/competicio/templates/home.html
@@ -1,20 +1,15 @@
-<!DOCTYPE html>
-<html lang="ca-ES">
-<head>
-    <meta charset="UTF-8">
-    <title>Competicions</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 
 {% if latest_competition_list %}
     <ul>
     {% for competicio in latest_competition_list %}
-        <li><a href="{% url 'detail' competicio.id %}/">{{ competicio.text }}</a></li>
+        <li><a href="/competicio/{{ competicio.id }}/">{{ competicio.text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
     <p>No hi ha competicions.</p>
 {% endif %}
 
-</body>
-</html>
+{% endblock %}
