Canviades algunes plantilles i els usuaris ja poden resoldre els problemes i navegar per les pàgines

--- a/competicio/templates/base.html
+++ b/competicio/templates/base.html
@@ -10,13 +10,13 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/competicio">
         <img alt="Competici&oacute;" src="...">
       </a>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
        <ul class="nav navbar-nav">
-          <li>{{ prova.titol }}</li>
+          <li><p class="navbar-text">{{ prova.titol }}</p></li>
           <li class="active"><a href="#">Estad&iacute;stiques <span class="sr-only">(current)</span></a></li>
           <li><a href="#">Classificaci&oacute;</a></li>
        </ul>
