--- a/competicio/templates/prova.html
+++ b/competicio/templates/prova.html
@@ -1,9 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <div class="container">
+    <div class="row">
+        <div class="col-md-2">
+            Sidebar content
+        </div>
+        <div class="col-md-10">
            <h2>{{ prova.titol }}</h2>
            <p>{{ prova.text }}</p>
            <form action="" method="POST">
+                {% csrf_token %}
                 <p>Resposta: <input type="text" name="resultat"/><input type="submit"/></p>
            </form>
+           <div>
+               <p><a href="{{ origen }}">Tornar a la llista</a></p>
+           </div>
+        </div>
+    </div>
+    </div>
 {% endblock %}
