Arreglats els Tests perquè ja no funcinàven (em perdo amb les funcions de Django i me n'oblido del més important ... )

--- a/competicio/templates/base.html
+++ b/competicio/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>{{ prova.titol }}</title>
+    <title>{{ titol_competicio }}</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 </head>
