--- a/competicio/templates/competicio.html
+++ b/competicio/templates/competicio.html
@@ -3,11 +3,11 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-md-2">
-                Sidebar content
+            <div class="col-md-4">
+                <img src="{{ imatge }}" class="img-responsive">
             </div>
-            <div class="col-md-10">
-                 <table>
+            <div class="col-md-8">
+                 <table class="table table-striped">
                 {%  for problema in problemes.all %}
                     <tr><td>
                         {{ forloop.counter }}:
