--- a/competicio/templates/home.html
+++ b/competicio/templates/home.html
@@ -2,14 +2,13 @@
 
 {% block content %}
 
+<ul id="competicions">
 {% if latest_competition_list %}
-    <ul>
     {% for competicio in latest_competition_list %}
         <li><a href="/competicio/{{ competicio.id }}/">{{ competicio.text }}</a></li>
     {% endfor %}
-    </ul>
 {% else %}
-    <p>No hi ha competicions.</p>
+    <li>No hi ha competicions.</li>
 {% endif %}
-
+</ul>
 {% endblock %}
